[package]
name = "construct-binary-tree-from-preorder-and-inorder-traversal"
version = "0.1.0"
authors = ["knanao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "construct_binary_tree_from_preorder_and_inorder_traversal"
path = "lib.rs"
