[package]
name = "convert-sorted-array-to-binary-search-tree"
version = "0.1.0"
authors = ["knanao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "convert_sorted_array_to_binary_search_tree"
path = "lib.rs"
