[package]
name = "longest-substring-with-at-most-two-distinct-characters"
version = "0.1.0"
authors = ["knanao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "longest_substring_with_at_most_two_distinct_characters"
path = "lib.rs"
