[package]
name = "lowest-common-ancestor-of-a-binary-tree"
version = "0.1.0"
authors = ["knanao"]
edition = "2021"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "lowest_common_ancestor_of_a_binary_tree"
path = "lib.rs"
