[package]
name = "capacity-to-ship-packages-within-d-days"
version = "0.1.0"
authors = ["knanao"]
edition = "2021"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "capacity_to_ship_packages_within_d_days"
path = "lib.rs"
